[package]
name = "webhook-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.64", features = ["serde_derive"] }
serde_json = "1.0.64"
